# pdf_compressor

./: .gitignore  CLAUDE.md  README.md  compress_pdf.py  pyproject.toml  requirements.txt
examples/: create_sample_pdf.py
pdf_compressor/: __init__.py  cli.py  core.py
tests/: test_compress.py
